--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -14,6 +14,12 @@ a {
   cursor: pointer;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  }
+  
 .container {
   margin: 0 auto;
   width: 100%;
