Add axios, axios wrapper, global components, fetch movies

--- a/src/assets/stylesheets/_colors.scss
+++ b/src/assets/stylesheets/_colors.scss
@@ -1,7 +1,7 @@
 // White
 $colorWhiteSnow: rgba(255, 255, 255, 1);
 $colorBlackShadow: rgba(0, 0, 0, 0.02);
-$colorBlack: rgba(255, 255, 255,1);
+
 
 // Red
 $colorRedCherry: rgba(236, 17, 21, 1); 
@@ -32,7 +32,7 @@ $colorInputCorrect: rgba(39, 174, 96, 1);
 $colorInputActiveBorder: rgba(47, 128, 237, 1);
 $colorInputActiveBg: rgba(47, 128, 237, 0.1);
 
-
+$colorScreeningCardBoxShadow: rgba(234,234,234,1);
 
 
 
